# openmw

./: .gitmodules  CMakeLists.txt
apps/opencs/: CMakeLists.txt
apps/openmw/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
apps/openmw/mwbase/: world.hpp
apps/openmw/mwmechanics/: character.cpp
apps/openmw/mwrender/: footprints.cpp  footprints.hpp  renderingmanager.cpp  renderingmanager.hpp  rendermode.hpp
apps/openmw/mwscript/: miscextensions.cpp
apps/openmw/mwworld/: worldimp.cpp  worldimp.hpp
components/: CMakeLists.txt
components/compiler/: extensions0.cpp  opcodes.hpp
extern-git/: CMakeLists.txt
